# oxwrt

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  RELEASING.md  SECURITY.md  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml  qemu-integration.yml  release.yml
config/: oxwrt.secrets.toml.example  oxwrt.toml
config/services/corerad/: corerad.toml
config/services/dhcp/: coredhcp.yml
config/services/dns/: named.toml
config/services/hostapd/: hostapd-2g.conf  hostapd-5g.conf
config/services/ntp/: ntp.toml
contrib/grafana/: README.md  oxwrt-dashboard.json
crates/oxwrt-api/: Cargo.toml
crates/oxwrt-api/src/: config.rs  firewall_schedule.rs  lib.rs  rpc.rs  secrets.rs
crates/oxwrt-linux/: Cargo.toml
crates/oxwrt-linux/src/: blocklists.rs  container.rs  coredhcp.rs  corerad.rs  hickory.rs  lib.rs  metrics_state.rs  miniupnpd.rs  net.rs  ntpd.rs  sqm.rs  static_routes.rs  svc_resolv.rs  sysupgrade.rs  urandom_seed.rs  vpn_client.rs  vpn_failover.rs  vpn_routing.rs  wan_dhcp.rs  wan_dhcp6.rs  wan_failover.rs  wan_routing.rs  wifi.rs  wireguard.rs
crates/oxwrt-linux/src/net/: firewall.rs  mod.rs
crates/oxwrt-proto/: Cargo.toml
crates/oxwrt-proto/src/: lib.rs
crates/oxwrtctl-cli/: Cargo.toml
crates/oxwrtctl-cli/src/: client.rs  diff.rs  dump_config.rs  lib.rs  main.rs  mullvad.rs  qr.rs  sign.rs  vpn_import.rs  watch.rs  wizard.rs
crates/oxwrtd/: Cargo.toml
crates/oxwrtd/src/: backup_sftp.rs  control.rs  ddns.rs  init.rs  main.rs  metrics.rs  wifi_rotate.rs
crates/oxwrtd/src/control/: server.rs  validate.rs
crates/oxwrtd/src/control/server/: backup.rs  crud.rs  diag.rs  logs.rs  mod.rs  reboot.rs  reload.rs  reset.rs  rollback.rs  set.rs  sysupgrade.rs
crates/oxwrtd/src/init/: clock.rs  console.rs  main_loop.rs  mod.rs  modules.rs  netdev.rs  preinit.rs  run.rs  watchdog.rs
diag-binaries/: BUILD.md  ping  ss  traceroute
hw-dump/: detailed.txt  system-info.txt
openwrt-config/: .config  feeds.conf
openwrt-config/files/etc/: oxwrt.toml
openwrt-packages/imagebuilder-overlay/: README.md
openwrt-packages/imagebuilder-overlay/files/etc/init.d/: oxwrtctl  oxwrtd
openwrt-packages/imagebuilder-overlay/files/etc/uci-defaults/: 97-oxwrt-debug-ssh-rootfs  98-oxwrt-diag-rootfs  99-oxwrtctl  99-oxwrtd
openwrt-packages/imagebuilder-overlay/files/lib/preinit/: 05_wait_for_eth0  30_failsafe_wait  30_failsafe_wait_timeout  81_urandom_seed
openwrt-packages/oxwrt-dhcp/: Makefile
openwrt-packages/oxwrt-diag/: Makefile
openwrt-packages/oxwrt-dns/: Makefile
openwrt-packages/oxwrt-ntp/: Makefile
openwrt-packages/oxwrtctl/: Makefile
openwrt-packages/oxwrtd/: Makefile
oxwrtctl/: Cargo.toml  build.rs
oxwrtctl/src/: config.rs  container.rs  control.rs  init.rs  logd.rs  main.rs  net.rs  rpc.rs  sysupgrade.rs  wan_dhcp.rs  wifi.rs
oxwrtctl/src/control/: client.rs  server.rs  validate.rs
scripts/: integration-test.sh  pre-push.sh  qemu-boot.sh  qemu-integration-test.sh  qemu-openwrt-boot.sh  release.sh  uart-capture.sh  verity-wrap.sh
