[workspace]
resolver = "3"
members = ["oxwrtctl"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
rust-version = "1.85"

[workspace.dependencies]
squic = { path = "../squic-rust" }
tokio = { version = "1", default-features = false, features = [
    "rt-multi-thread",
    "net",
    "io-util",
    "sync",
    "time",
    "macros",
    "signal",
    "process",
    "fs",
] }
serde = { version = "1", features = ["derive"] }
rmp-serde = "1"
toml = "0.8"
toml_edit = "0.22"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "env-filter"] }
bytes = "1"
hex = "0.4"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand_core = { version = "0.6", features = ["getrandom"] }
quinn = { version = "0.11", default-features = false, features = ["rustls-ring", "runtime-tokio"] }
futures-util = { version = "0.3", default-features = false }
dhcproto = "0.14"
socket2 = { version = "0.6", features = ["all"] }
rand = "0.9"
seccompiler = "0.5"
caps = "0.5"
libc = "0.2"
landlock = "0.4"
serde_json = "1"
sha2 = "0.10"

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
