[workspace]
resolver = "3"
members = [
    "crates/oxwrt-api",
    "crates/oxwrt-linux",
    "crates/oxwrt-proto",
    "crates/oxwrtctl-cli",
    "crates/oxwrtd",
]

[workspace.package]
version = "0.1.1"
edition = "2024"
license = "MIT"
rust-version = "1.85"

[workspace.dependencies]
oxwrt-api = { path = "crates/oxwrt-api" }
oxwrt-linux = { path = "crates/oxwrt-linux" }
oxwrt-proto = { path = "crates/oxwrt-proto" }
oxwrtctl-cli = { path = "crates/oxwrtctl-cli" }
squic = { path = "../squic-rust" }
tokio = { version = "1", default-features = false, features = [
    "rt-multi-thread",
    "net",
    "io-util",
    "sync",
    "time",
    "macros",
    "signal",
    "process",
    "fs",
] }
serde = { version = "1", features = ["derive"] }
rmp-serde = "1"
toml = "0.8"
toml_edit = "0.22"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "env-filter"] }
bytes = "1"
hex = "0.4"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand_core = { version = "0.6", features = ["getrandom"] }
quinn = { version = "0.11", default-features = false, features = ["rustls-ring", "runtime-tokio"] }
futures-util = { version = "0.3", default-features = false }
dhcproto = "0.14"
socket2 = { version = "0.6", features = ["all"] }
rand = "0.9"
seccompiler = "0.5"
caps = "0.5"
libc = "0.2"
landlock = "0.4"
serde_json = "1"
sha2 = "0.10"
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }
tar = { version = "0.4", default-features = false }
tempfile = "3"

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
