[workspace]
resolver = "3"
members = [
    "crates/oxwrt-api",
    "crates/oxwrt-linux",
    "crates/oxwrt-proto",
    "crates/oxwrtctl-cli",
    "crates/oxwrtd",
]

[workspace.package]
version = "0.2.0"
edition = "2024"
license = "MIT"
rust-version = "1.85"

[workspace.dependencies]
oxwrt-api = { path = "crates/oxwrt-api" }
oxwrt-linux = { path = "crates/oxwrt-linux" }
oxwrt-proto = { path = "crates/oxwrt-proto" }
oxwrtctl-cli = { path = "crates/oxwrtctl-cli" }
squic = { path = "../squic-rust" }
tokio = { version = "1", default-features = false, features = [
    "rt-multi-thread",
    "net",
    "io-util",
    "sync",
    "time",
    "macros",
    "signal",
    "process",
    "fs",
] }
serde = { version = "1", features = ["derive"] }
rmp-serde = "1"
toml = "0.8"
toml_edit = "0.22"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "env-filter"] }
bytes = "1"
hex = "0.4"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand_core = { version = "0.6", features = ["getrandom"] }
quinn = { version = "0.11", default-features = false, features = ["rustls-ring", "runtime-tokio"] }
futures-util = { version = "0.3", default-features = false }
dhcproto = "0.14"
socket2 = { version = "0.6", features = ["all"] }
rand = "0.9"
seccompiler = "0.5"
caps = "0.5"
libc = "0.2"
landlock = "0.4"
serde_json = "1"
sha2 = "0.10"
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }
tar = { version = "0.4", default-features = false }
tempfile = "3"
# `oxctl diff` renders a unified diff between a local TOML and
# the router's live config. `similar` is the standard Myers-
# diff crate for Rust — small + ergonomic + no heavy deps.
similar = "2"
base64 = { version = "0.22", default-features = false, features = ["std"] }
# HTTP client for the DDNS updater. rustls-tls shares the already-
# pulled-in rustls+ring stack from quinn (no openssl libcrypto drag-
# in). Default features are off to avoid bundling everything; we
# only need json + https + charset. Blocking feature isn't used —
# we run in the existing tokio runtime.
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls-native-roots",
    "http2",
    "charset",
    "json",
] }

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
