[package]
name = "oxwrtctl"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "oxwrtctl"
path = "src/main.rs"

[dependencies]
oxwrt-api.workspace = true
oxwrt-proto.workspace = true
squic.workspace = true
tokio.workspace = true
serde.workspace = true
rmp-serde.workspace = true
toml.workspace = true
toml_edit.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
bytes.workspace = true
hex.workspace = true
ed25519-dalek.workspace = true
rand_core.workspace = true
quinn.workspace = true
serde_json.workspace = true
sha2.workspace = true
flate2.workspace = true
tar.workspace = true

[dev-dependencies]
tempfile = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
rustix = { version = "1", features = [
    "fs",
    "mount",
    "process",
    "system",
    "thread",
    "net",
    "pipe",
    "event",
    "termios",
    "time",
] }
rtnetlink = "0.20"
netlink-packet-route = "0.29"
rustables = "0.8"
futures-util = { workspace = true }
dhcproto = { workspace = true }
socket2 = { workspace = true }
rand = { workspace = true }
seccompiler = { workspace = true }
caps = { workspace = true }
libc = { workspace = true }
landlock = { workspace = true }
