[package]
name = "oxwrtctl"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "oxwrtctl"
path = "src/main.rs"

[dependencies]
oxwrt-api.workspace = true
oxwrt-proto.workspace = true
# Daemon's `--client` subcommand calls into oxwrtctl-cli's run() so
# operator muscle memory (`oxwrtctl --client …`) keeps working after
# the CLI got extracted into its own bin/lib crate.
oxwrtctl-cli.workspace = true
squic.workspace = true
tokio.workspace = true
serde.workspace = true
rmp-serde.workspace = true
toml.workspace = true
toml_edit.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
bytes.workspace = true
hex.workspace = true
ed25519-dalek.workspace = true
rand_core.workspace = true
quinn.workspace = true
serde_json.workspace = true
sha2.workspace = true
flate2.workspace = true
tar.workspace = true

[dev-dependencies]
tempfile = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
# container/net/wan_dhcp/wifi/sysupgrade/logd moved to the oxwrt-linux
# crate. Daemon-local code (init.rs, control/server.rs, the --attach-
# netns / --smoke / --smoke-ns main.rs subcommands) still needs direct
# rustix + rtnetlink + futures-util for its own netlink plumbing.
oxwrt-linux.workspace = true
rustix = { version = "1", features = [
    "fs",
    "mount",
    "process",
    "system",
    "thread",
    "net",
    "pipe",
    "event",
    "termios",
    "time",
] }
rtnetlink = "0.20"
futures-util = { workspace = true }
libc = { workspace = true }
