[package]
name = "oxwrt-api"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

# Pure data-types crate: TOML schema (config.rs) + RPC protocol types
# (rpc.rs). No system dependencies, builds on macOS + Linux. Consumed
# by every other oxwrt crate that needs to read/write the config or
# send/receive RPCs — daemon, CLI, offline validators, third-party
# integrators.

[dependencies]
serde.workspace = true
toml.workspace = true
# For the split/merge secrets writer (secrets.rs): we need to preserve
# operator comments + section order when splitting oxwrt.toml into its
# public + secrets halves, which plain `toml` round-trip would lose.
toml_edit.workspace = true
thiserror.workspace = true
rmp-serde.workspace = true

[dev-dependencies]
# For tests that round-trip TOML — the example-config parse test
# needs access to the workspace-checked-in config/oxwrt.toml and
# config/services/ files. tempfile is used by the Config::load-from-
# path tests.
tempfile = { workspace = true }
