[package]
name = "oxwrtctl-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

# The operator-facing CLI client. Installs as `oxctl` on developer
# Macs; ALSO exposed as a library so the on-device daemon's `--client`
# subcommand can call the same run() and stay compatible with operator
# muscle memory (`oxwrtctl --client …`).
#
# Compiles on every target the workspace builds on — the point of the
# split is that an M1 Mac doesn't need rustix/netlink/nft/seccomp/
# landlock/dhcproto/tar/flate2 on its compile graph just to talk to
# the router.

[lib]
name = "oxwrtctl_cli"
path = "src/lib.rs"

[[bin]]
name = "oxctl"
path = "src/main.rs"

[dependencies]
oxwrt-api.workspace = true
oxwrt-proto.workspace = true
squic.workspace = true
quinn.workspace = true
tokio.workspace = true
thiserror.workspace = true
hex.workspace = true
# Used only by the `--print-server-key` subcommand.
ed25519-dalek.workspace = true
tracing-subscriber.workspace = true
# Used to decode the Backup response's Value into raw bytes so
# `oxctl .. backup > file.tar.gz` produces a valid archive.
base64.workspace = true
# Local QR rendering for `wg-enroll --qr`. No-std-friendly,
# no transitive deps worth noting.
qrcodegen = "1"
# .conf (wg-quick) parsing + TOML edit for `vpn-profile import`.
# toml_edit preserves comments / formatting so merging an imported
# profile into an operator's hand-written oxwrt.toml doesn't wipe
# their inline notes.
toml_edit.workspace = true
# wizard tests round-trip the generated TOML through the parser
# to prove validity. Pull plain `toml` since toml_edit's Value
# tree is awkward for test assertions.
toml.workspace = true
# Mullvad relay list API for `mullvad-relays` / `vpn-switch-relay`.
# reqwest is already a workspace dep (rustls-tls-native-roots);
# serde_json + serde for the response shape.
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
# For parallel-ping the relay list in `vpn-auto-switch`.
futures-util.workspace = true
# `oxctl watch` needs a SIGINT handler to exit cleanly on Ctrl-C.
# Using libc::signal directly instead of pulling the `ctrlc` crate
# for one-line wiring.
libc.workspace = true
# `oxctl diff` renders a unified diff between a local TOML and
# the router's live config-dump.
similar.workspace = true

[dev-dependencies]
# `wizard` tests round-trip generated TOML through a tmpdir +
# `Config::load_with_secrets` to prove the split output is valid.
tempfile.workspace = true
