[package]
name = "oxwrtd"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

# The PID-1 daemon. Installed as /usr/bin/oxwrtd on-device; the kernel
# execs it via the /sbin/init → oxwrtd symlink at boot. Everything
# userspace on this router runs under this one process: early mounts,
# module loading, mount_root, netdev rename, service supervision, the
# sQUIC control plane.
#
# Companion binaries are in sibling crates:
# - `oxctl` (crates/oxwrtctl-cli) — operator-facing CLI client
# - diag-only helpers ship from upstream OpenWrt packages
[[bin]]
name = "oxwrtd"
path = "src/main.rs"

[dependencies]
oxwrt-api.workspace = true
oxwrt-proto.workspace = true
# Daemon's `--client` subcommand shares the oxwrtctl-cli lib so
# `oxwrtd --client …` and `oxctl …` hit the same code path.
oxwrtctl-cli.workspace = true
squic.workspace = true
tokio.workspace = true
serde.workspace = true
rmp-serde.workspace = true
toml.workspace = true
toml_edit.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
bytes.workspace = true
hex.workspace = true
ed25519-dalek.workspace = true
rand_core.workspace = true
quinn.workspace = true
serde_json.workspace = true
sha2.workspace = true
# DDNS module — HTTP client for third-party update APIs. See
# src/ddns.rs for provider list + rationale. rustls-native-roots
# avoids bundling a webpki-roots.rs into firmware.
reqwest.workspace = true
# Backup/restore serializes a tar.gz over the sQUIC control plane
# as a base64-encoded Value. Raw bytes in a tagged-enum field
# wouldn't round-trip cleanly through rmp-serde without extra cfg.
base64.workspace = true
# Backup uses tempfile to stage the restore extraction before
# swapping the live /etc/oxwrt/ tree atomically.
tempfile.workspace = true
flate2.workspace = true
tar.workspace = true

[dev-dependencies]
tempfile = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
# container/net/wan_dhcp/wifi/sysupgrade/logd moved to the oxwrt-linux
# crate. Daemon-local code (init.rs, control/server.rs, the --attach-
# netns / --smoke / --smoke-ns main.rs subcommands) still needs direct
# rustix + rtnetlink + futures-util for its own netlink plumbing.
oxwrt-linux.workspace = true
rustix = { version = "1", features = [
    "fs",
    "mount",
    "process",
    "system",
    "thread",
    "net",
    "pipe",
    "event",
    "termios",
    "time",
] }
rtnetlink = "0.20"
futures-util = { workspace = true }
libc = { workspace = true }
